--- a/WEB-INF/web.xml
+++ b/WEB-INF/web.xml
@@ -4,6 +4,12 @@
          http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
          version="3.1">
 
+  <welcome-file-list>
+    <welcome-file>index.html</welcome-file>
+    <welcome-file>index.jsp</welcome-file>
+    <welcome-file>index.xhtml</welcome-file>
+  </welcome-file-list>
+
   <servlet>
     <servlet-name>servletM</servlet-name>
     <servlet-class>servletM</servlet-class>
